--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "extend": "~1.2.1",
         "jshint-loader": "~0.5.0",
         "mathjs": "~0.25.0",
-        "mongoose": "~3.8.12"
+        "mongoose": "~3.8.12",
+        "bunyan": "~0.23.1"
     },
     "devDependencies": {
         "grunt": "~0.4.1",
