--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "jshint-loader": "~0.5.0",
         "mathjs": "~0.25.0",
         "mongoose": "~3.8.12",
-        "bunyan": "~0.23.1"
+        "bunyan": "~0.23.1",
+        "underscore": "~1.3.21"
     },
     "devDependencies": {
         "grunt": "~0.4.1",
