--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "mathjs": "~0.25.0",
         "mongoose": "~3.8.12",
         "bunyan": "~0.23.1",
-        "underscore": "~1.3.21"
+        "underscore": "~1.3.21",
+        "forever": "~0.11.1"
     },
     "devDependencies": {
         "grunt": "~0.4.1",
