--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "underscore": "~1.6.0",
         "forever": "~0.11.1",
         "socket.io": "~1.0.6",
-        "socket.io-client": "~1.0.6"
+        "socket.io-client": "~1.0.6",
+        "request": "~2.40.0"
     },
     "devDependencies": {
         "grunt": "~0.4.1",
