--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "socket.io": "~1.0.6",
         "socket.io-client": "~1.0.6",
         "request": "~2.40.0",
-        "querystring": "~0.2.0"
+        "querystring": "~0.2.0",
+        "mongous": "~0.2.6"
     },
     "devDependencies": {
         "grunt": "~0.4.1",
