--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "socket.io-client": "~1.0.6",
         "request": "~2.40.0",
         "querystring": "~0.2.0",
-        "mongous": "~0.2.6"
+        "mongous": "~0.2.6",
+        "forever": "~0.11.1"
     },
     "devDependencies": {
         "grunt": "~0.4.1",
